# home-work

Bai1/: Bai1.cbp  Bai1.depend  Bai1.layout  main.cpp
Exercise1/: CMakeLists.txt
Exercise1/headers/: Employee.hpp  EmployeeManagement.hpp  InheritEmployee.hpp
Exercise1/sources/: Employee.cpp  EmployeeManagement.cpp  InheritEmployee.cpp  main.cpp
Exercise10/: CMakeLists.txt
Exercise10/headers/: Document.hpp
Exercise10/sources/: Document.cpp  main.cpp
Exercise11/: CMakeLists.txt
Exercise11/headers/: Complex.hpp
Exercise11/sources/: Complex.cpp  main.cpp
Exercise12/: CMakeLists.txt
Exercise12/headers/: Car.hpp  Motorbike.hpp  Transportation.hpp  TransportationManagement.hpp  Truck.hpp
Exercise12/sources/: Car.cpp  Motorbike.cpp  Transportation.cpp  TransportationManagement.cpp  Truck.cpp  main.cpp
Exercise13/: CMakeLists.txt
Exercise13/headers/: Certificate.hpp  Employee.hpp  EmployeeManagement.hpp  Experience.hpp  Fresher.hpp  Intern.hpp
Exercise13/sources/: Certificate.cpp  Employee.cpp  EmployeeManagement.cpp  Experience.cpp  Fresher.cpp  Intern.cpp  main.cpp
Exercise14/: CMakeLists.txt
Exercise14/headers/: GoodStudent.hpp  NormalStudent.hpp  Student.hpp  StudentManagement.hpp
Exercise14/sources/: GoodStudent.cpp  NormalStudent.cpp  Student.cpp  StudentManagement.cpp  main.cpp
Exercise15/: CMakeLists.txt
Exercise15/headers/: FacultyManagement.hpp  InServiceStudent.hpp  Result.hpp  Student.hpp  StudentManagement.hpp
Exercise15/sources/: FacultyManagement.cpp  InServiceStudent.cpp  Result.cpp  Student.cpp  StudentManagement.cpp  main.cpp
Exercise2/: CMakeLists.txt
Exercise2/headers/: Book.hpp  Document.hpp  DocumentManagement.hpp  Magazine.hpp  Newspaper.hpp
Exercise2/sources/: Book.cpp  Document.cpp  DocumentManagement.cpp  Magazine.cpp  Newspaper.cpp  main.cpp
Exercise3/: CMakeLists.txt
Exercise3/headers/: Candidate.hpp  CandidateManagement.hpp  GroupA.hpp  GroupB.hpp  GroupC.hpp
Exercise3/sources/: Candidate.cpp  CandidateManagement.cpp  GroupA.cpp  GroupB.cpp  GroupC.cpp  main.cpp
Exercise4/: CMakeLists.txt
Exercise4/headers/: Family.hpp  Neighborhood.hpp  Person.hpp
Exercise4/sources/: Family.cpp  Neighborhood.cpp  Person.cpp  main.cpp
Exercise5/: CMakeLists.txt
Exercise5/headers/: Hotel.hpp  Person.hpp  Room.hpp
Exercise5/sources/: Hotel.cpp  Person.cpp  Room.cpp  main.cpp
Exercise6/: CMakeLists.txt
Exercise6/headers/: School.hpp  Student.hpp
Exercise6/sources/: School.cpp  Student.cpp  main.cpp
Exercise7/: CMakeLists.txt
Exercise7/headers/: Faculty.hpp  Person.hpp  Teacher.hpp
Exercise7/sources/: Faculty.cpp  Person.cpp  Teacher.cpp  main.cpp
Exercise8/: CMakeLists.txt
Exercise8/headers/: LibCard.hpp  Library.hpp  Student.hpp
Exercise8/sources/: LibCard.cpp  Library.cpp  Student.cpp  main.cpp
Exercise9/: CMakeLists.txt
Exercise9/headers/: Customer.hpp  Receipt.hpp  ReceiptManagement.hpp
Exercise9/sources/: Customer.cpp  Receipt.cpp  ReceiptManagement.cpp  main.cpp
